////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
// © 2011-2021 Telenav, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

package com.telenav.aonia.map.data.formats.pbf.model.metadata;

import com.telenav.aonia.map.data.formats.pbf.project.lexakai.diagrams.DiagramPbfModelMetadata;
import com.telenav.kivakit.core.kernel.language.values.identifier.IntegerIdentifier;
import com.telenav.lexakai.annotations.UmlClassDiagram;

@UmlClassDiagram(diagram = DiagramPbfModelMetadata.class)
public class PbfUserIdentifier extends IntegerIdentifier
{
    public static final PbfUserIdentifier SCOUT = new PbfUserIdentifier(2100001);

    public PbfUserIdentifier(final int identifier)
    {
        super(identifier);
    }
}
